{{$NEXT}}

- Fixed test failures on msys. Implemented by Paulo Custodio. GH #116.


0.82     2022-04-15

- Fixed git tests to ignore local Git configuration files, which may cause the
  tests to fail. Implemented by Andreas Vögele. GH #109.

- The git tests nor run with LC_ALL set to C. Implemented by Andreas
  Vögele. GH #109.


0.81     2022-02-16

- The PerlTidy plugin will now always append the `--encode-output-strings`
  flag when using `Perl::Tidy` 20220101 or newer. This eliminates issues with
  character encoded content reported in GH #84, reported by Greg
  Oschwald. Thanks to Steven Hancock for letting me know that this was
  possible.


0.80     2021-11-26

- Don't run the PodSpell plugin test unless `ispell` is installed. Reported by
  Slaven Rezić. GH #108.


0.79     2021-11-26

- Run `git stash pop` with `--quiet` flag again, as long as Git is not
  2.24.x. See notes in 0.75 for why we stopped passing `--quiet` in the first
  place.

- Fixed a bug where the class in the `--tidyall-class` option was not
  loaded. Fixed by Shlomi Fish. PR #107. Fixed GH #43.


0.78     2020-04-25

- Fix an issue with the pre-commit hook code when commit after a merge. If
  tidyall invoked `git stash` in the hook and there was content to stash, this
  would break the merge commit, leading to the commit to fail entirely. Now
  the pre-commit hook code will simply never call `git stash` when merging a
  merge commit. Reported by Damien Prystay. GH #100.

- This release also includes the changes from the 0.76 and 0.77 trial
  releases.


0.77     2020-01-04 (TRIAL RELEASE)

- Made some more line ending fixes in the test code.

- Fixed a test to handle spaces with paths (on Windows, at least).


0.76     2019-12-24 (TRIAL RELEASE)

- Preserve line endings in files but using raw mode to read and
  write. Otherwise Perl will automatically write files with the
  platform-appropriate ending. This could lead to ending "flapping" if you